# bbb-downloader

./: .gitignore  README.md  main.py  pyproject.toml
src/gmtv/: __init__.py  donwload.py  processor.py
